--- a/app-source-code/app/src/main/res/values/strings.xml
+++ b/app-source-code/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="sauce">\@0a1X4k`~{n>{=!`Lg!`\"</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
